<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sensor.colorimetry.stripv2.instructions.InstructionActivity">

    <include layout="@layout/toolbar" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_footer"
        android:layout_below="@id/toolbar" />

    <RelativeLayout
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/image_pageLeft"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/button_arrow_left_selector"
            android:visibility="invisible" />

        <org.akvo.caddisfly.sensor.colorimetry.stripv2.widget.PageIndicatorView
            android:id="@+id/pager_indicator"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/image_pageRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/button_arrow_right_selector" />
    </RelativeLayout>
</RelativeLayout>