...
    <string name="gnu_software"><a href="https://code.google.com/archive/p/javamail-android/">Java Mail</a></string>
    <string name="cca_software"><a href="https://design.google.com/icons/">Material Icons</a></string>
    <string name="eclipse_software"><a href="https://github.com/junit-team/junit4">Junit 4</a></string>

    <string name="testing">Testing</string>
    <string name="camera">Camera</string>
    <string name="soilCalibrate">Soil - Calibrate</string>
    <string name="waterCalibrate">Water - Calibrate</string>
    <string name="openAppFolder">Show app folder</string>
    <string name="showFolderKey">showFolderKey</string>
    <string name="cameraFocusMode">Camera Focus Mode</string>
    <string name="flashMode">Camera Flash Mode</string>

</resources>
