...
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onColiformsClick"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="Coliforms"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText"
                    android:theme="?longButtonStyle"
                    android:visibility="gone" />

                <RelativeLayout
...
